tests/machine/x/scala/group_by_left_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_left_join.scala:11: error: value filter is not a member of group_by_left_join._Group[String,group_by_left_join.Stat]
  val stats = ((for { c <- customers; o = orders.find(o => (o.customerId).asInstanceOf[Int] == c.id) } yield (c.name, Stat(c = c, o = o))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Stat1(name = g.key, count = (for { r <- g; if r.o.nonEmpty } yield r).size) }.toList
                                                                                                                                                                                                                                                                    ^
/workspace/mochi/tests/machine/x/scala/group_by_left_join.scala:15: error: value name is not a member of Nothing
      println((s.name) + " " + ("orders:") + " " + (s.count))
                 ^
/workspace/mochi/tests/machine/x/scala/group_by_left_join.scala:15: error: value count is not a member of Nothing
      println((s.name) + " " + ("orders:") + " " + (s.count))
                                                      ^
three errors found
